lib_LTLIBRARIES = libmbsimtinyxml.la
INCLUDES = -DTIXML_USE_STL
libmbsimtinyxml_la_SOURCES = tinynamespace.cpp \
  tinystr.cpp \
  tinyxml.cpp \
  tinyxmlerror.cpp \
  tinyxmlparser.cpp

libmbsimtinyxml_la_HEADERS = tinynamespace.h \
  tinystr.h \
  tinyxml.h

EXTRA_DIST = readme.txt changes.txt

libmbsimtinyxml_ladir = $(includedir)/mbsimtinyxml
