noinst_LTLIBRARIES = libfmivariables.la libxmlpputils.la

libfmivariables_la_SOURCES = fmi_variables.cc
libfmivariables_la_CXXFLAGS = $(FMUSRCDEPS_CFLAGS)

libxmlpputils_la_SOURCES = xmlpp_utils.cc
libxmlpputils_la_CXXFLAGS = $(FMUPPXMLDEPS_CFLAGS)

mbsimfmidir = $(includedir)/mbsimfmi
mbsimfmi_HEADERS = mbsimsrc_fmi.h

